--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a hfre="#">About</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Login</a></li>
                     <li><a href="#">Get started</a></li>
@@ -23,7 +23,7 @@
         </header>
 
         <section id="first" class="column">
-            <h2>Easy and fast way to own a car.</h2>
+            <p>Easy and fast way to own a car.</p>
             <p>Rocarstor i one of the best leading car dealers in Kenya. We offer car purchase and rental services.</p>
 
             <img src="" alt="Mercedez Benz">
@@ -47,67 +47,67 @@
             </div>
 
             <div>
+                <div class="car">
+                    <h3>Mercedes Benz C</h3>
+                    <img src="./Mercedes Benz C.png" alt="Mercedes Benz C">
+                </div>
                 <div class="cars">
+                    <h3>Mercedes Benz G</h3>
+                    <img src="./Mercedes Benz G.png" alt="Mercedes Benz G">
+                </div>
+                <div>
+                    <h3>Praga</h3>
+                    <img src="./praga.png" alt="Praga">
+                </div>
+
+                <div>
+                    <p>1-3 people</p>
+                    <p>1-3 bags</p>
+                    <p>1-3 people</p>
+                    <p>1-3 bags</p>
+                    <p>1-3 people</p>
+                    <p>1-3 bags</p>
+                    <a href="#">Get More Info</a>
+                    <a href="#">Get More Info</a>
+                    <a href="#">Get More Info</a>
+                </div>
+                <div class="cars">
+                    <h3>Lorenzo Marcinno</h3>
+                    <img src="./Lorenzo Marcinno.png" alt="Lorenzo Marcinno">
+                </div>
+                <div class="cars">
+                    <h3>Limousine</h3>
+                    <img src="./Limousine.png" alt="Limousine">
+                </div>
+                <div>
+                    <h3>Mercedes Benz E</h3>
+                    <img src="./Mercedes Benz E.png" alt="Mercedes Benz E">
+                </div>
+
+                <div>
+                    <p>1-3 people</p>
+                    <p>1-3 bags</p>
+                    <p>1-3 people</p>
+                    <p>1-3 bags</p>
+                    <p>1-3 people</p>
+                    <p>1-3 bags</p>
+                    <a href="#">Get More Info</a>
+                    <a href="#">Get More Info</a>
+                    <a href="#">Get More Info</a>
+                </div>
+
+                <div>
+                    <div class="cars">
                     <p>Mercedes Benz C</p>
-                    <img src="" alt="Mercedes Benz C">
+                    <img src="./Mercedes Benz C.png" alt="Mercedes Benz C">
                 </div>
                 <div class="cars">
                     <p>Mercedes Benz G</p>
-                    <img src="" alt="Mercedes Benz G">
+                    <img src="./Mercedes Benz G.png" alt="Mercedes Benz G">
                 </div>
                 <div>
                     <p>Praga</p>
-                    <img src="" alt="Praga">
-                </div>
-
-                <div>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <a href="#">Get More Info</a>
-                    <a href="#">Get More Info</a>
-                    <a href="#">Get More Info</a>
-                </div>
-                <div class="cars">
-                    <p>Lorenzo Marcinno</p>
-                    <img src="" alt="Lorenzo Marcinno">
-                </div>
-                <div class="cars">
-                    <p>Limousine</p>
-                    <img src="" alt="Limousine">
-                </div>
-                <div>
-                    <p>Mercedes Benz E</p>
-                    <img src="" alt="Mercedes Benz E">
-                </div>
-
-                <div>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <a href="#">Get More Info</a>
-                    <a href="#">Get More Info</a>
-                    <a href="#">Get More Info</a>
-                </div>
-
-                <div>
-                                    <div class="cars">
-                    <p>Mercedes Benz C</p>
-                    <img src="" alt="Mercedes Benz C">
-                </div>
-                <div class="cars">
-                    <p>Mercedes Benz G</p>
-                    <img src="" alt="Mercedes Benz G">
-                </div>
-                <div>
-                    <p>Praga</p>
-                    <img src="" alt="Praga">
+                    <img src="./praga.png" alt="Praga">
                 </div>
 
                 <div>
@@ -126,38 +126,38 @@
 
         <section>
             <h2>Happy Clients</h2>
-            <p><em>Our goal is to meet your desires of owning</em></p>
-            <p><e>a car</e></p>
+            <p><strong>Our goal is to meet your desires of owning</strong></p>
+            <p><strong>a car</strong></p>
 
             <div class="client-response">
                 <div>
-                    <img src="" alt="John M">
+                    <img src="./feedbackprofile.png" alt="John M">
                     <p>I had a wonderful experience renting a car</p>
                     <p>from this website! The process was easy</p>
                     <p>and hassle-free. and the car was in great</p>
-                    <p><em>John M</em></p>
+                    <p><strong>John M</strong></p>
                 </div>
 
                 <div>
-                    <img src="" alt="Kip T">
+                    <img src="./feedbackprofile.png" alt="Kip T">
                     <p>The customer was excellent as well</p>
                     <p>- the staff was friendly and professional,</p>
                     <p>and they went above and beyond to ensure</p>
                     <p>that I had a positive rental experience.</p>
-                    <p><em>Kip T</em></p>
+                    <p><strong>Kip T</strong></p>
                 </div>
 
                 <div>
-                    <img src="" alt="Neema M">
+                    <img src="./feedbackprofile.png" alt="Neema M">
                     <p>I would definitely recommend this car</p>
                     <p>rental service to anyone looking for a reliable and convenient way to travel.</p>
-                    <p>Neema M</p>
+                    <p><strong>Neema M</strong></p>
                 </div>
             </div>
         </section>
 
-        <section>
-            <img src="" alt="Download teh free Rocarstor App Here">
+        <section class="parent">
+            <img src="" alt="Download the free Rocarstor App Here">
         </section>
 
         <section>
