I have added a subscribe container

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>Easy and fast way to own a car.</p>
             <p>Rocarstor i one of the best leading car dealers in Kenya. We offer car purchase and rental services.</p>
 
-            <img src="" alt="Mercedez Benz">
+            <img src="./image 1.png" alt="Mercedez Benz">
 
             <div class="clear">
                 <a href="#">Buy a car</a>
@@ -157,7 +157,25 @@
         </section>
 
         <section class="parent">
-            <img src="" alt="Download the free Rocarstor App Here">
+            <div>
+                <h3>Download the free</h3>
+                <h3>Rocarstor App</h3>
+
+                <p>for faster, easir bookings and conslusive deals</p>
+
+            </div>
+
+            <div>
+                <img src="./Appstore.png" alt="Appstore"> 
+            </div>
+
+            <div>
+                <img src="./Google play store.png" alt="Google Play Store">
+            </div>
+
+            <div>
+                <img src="./car-rental.png" alt="Car Rental profile">
+            </div>
         </section>
 
         <section>
@@ -191,6 +209,21 @@
                     <li>Rental Deals</li>
                     <li>New Offers</li>
                 </ul>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="box">
+                    <h3>Subscribe to services</h3>
+                    <form>
+                        <label>Name:</label>
+                        <input type= "text" placeholder="Enter your name">
+                        <label>Email address</label>
+                        <input type="email" placeholder="Enter your email address">
+                        <button>Subscribe</button>
+                    </form>
+                </div>
             </div>
         </section>
 
