editted the images part one

--- a/index.html
+++ b/index.html
@@ -51,10 +51,31 @@
                     <h3>Mercedes Benz C</h3>
                     <img src="./Mercedes Benz C.png" alt="Mercedes Benz C">
                 </div>
+
+                <div>
+                    <p>1-3 people</p>
+                    <p>1-3 bags</p>
+                </div>
+
+                <div>
+                    <a href="#">Get More Info</a>
+                </div>
+
+
                 <div class="cars">
                     <h3>Mercedes Benz G</h3>
                     <img src="./Mercedes Benz G.png" alt="Mercedes Benz G">
                 </div>
+
+                <div>
+                    <p>1-3 people</p>
+                    <p>1-3 bags</p>
+                </div>
+
+                <div>
+                    <a href="#">Get More Info</a>
+                </div>
+
                 <div>
                     <h3>Praga</h3>
                     <img src="./praga.png" alt="Praga">
@@ -63,13 +84,12 @@
                 <div>
                     <p>1-3 people</p>
                     <p>1-3 bags</p>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
+                </div>
+
+                <div>
                     <a href="#">Get More Info</a>
-                    <a href="#">Get More Info</a>
-                    <a href="#">Get More Info</a>
+                </div>
+
                 </div>
                 <div class="cars">
                     <h3>Lorenzo Marcinno</h3>
