--- a/index.html
+++ b/index.html
@@ -90,58 +90,93 @@
                     <a href="#">Get More Info</a>
                 </div>
 
-                </div>
-                <div class="cars">
-                    <h3>Lorenzo Marcinno</h3>
-                    <img src="./Lorenzo Marcinno.png" alt="Lorenzo Marcinno">
-                </div>
-                <div class="cars">
-                    <h3>Limousine</h3>
-                    <img src="./Limousine.png" alt="Limousine">
-                </div>
-                <div>
-                    <h3>Mercedes Benz E</h3>
-                    <img src="./Mercedes Benz E.png" alt="Mercedes Benz E">
-                </div>
+        </section>
 
-                <div>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <a href="#">Get More Info</a>
-                    <a href="#">Get More Info</a>
-                    <a href="#">Get More Info</a>
-                </div>
+        <section>
+            <div class="cars">
+                <h3>Lorenzo Marcinno</h3>
+                <img src="./Lorenzo Marcinno.png" alt="Lorenzo Marcinno">
+            </div>
 
-                <div>
-                    <div class="cars">
-                    <p>Mercedes Benz C</p>
-                    <img src="./Mercedes Benz C.png" alt="Mercedes Benz C">
-                </div>
+            <div>
+                <p>1-3 people</p>
+                <p>1-3 bags</p>
+            </div>
+
+            <div>
+                <a href="#">Get More Info</a>
+            </div>
+
+            <div class="cars">
+                <h3>Limousine</h3>
+                <img src="./Limousine.png" alt="Limousine">
+            </div>
+
+            <div>
+                <p>1-3 people</p>
+                <p>1-3 bags</p>
+            </div>
+
+            <div>
+                <a href="#">Get More Info</a>
+            </div>
+
+            <div>
+                <h3>Mercedes Benz E</h3>
+                <img src="./Mercedes Benz E.png" alt="Mercedes Benz E">
+            </div>
+
+            <div>
+                <p>1-3 people</p>
+                <p>1-3 bags</p>
+            </div>
+
+            <div>
+                <a href="#">Get More Info</a>
+            </div>
+
+            <div>
                 <div class="cars">
-                    <p>Mercedes Benz G</p>
-                    <img src="./Mercedes Benz G.png" alt="Mercedes Benz G">
-                </div>
-                <div>
-                    <p>Praga</p>
-                    <img src="./praga.png" alt="Praga">
-                </div>
+                <p>Mercedes Benz C</p>
+                <img src="./Mercedes Benz C.png" alt="Mercedes Benz C">
+            </div>
 
-                <div>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <p>1-3 people</p>
-                    <p>1-3 bags</p>
-                    <a href="#">Get More Info</a>
-                    <a href="#">Get More Info</a>
-                    <a href="#">Get More Info</a>
-                </div>
-                
+            <div>
+                <p>1-3 people</p>
+                <p>1-3 bags</p>
+            </div>
+
+            <div>
+                <a href="#">Get More Info</a>
+            </div>
+
+            <div class="cars">
+                <p>Mercedes Benz G</p>
+                <img src="./Mercedes Benz G.png" alt="Mercedes Benz G">
+            </div>
+
+            <div>
+                <p>1-3 people</p>
+                <p>1-3 bags</p>
+            </div>
+
+            <div>
+                <a href="#">Get More Info</a>
+            </div>
+
+            <div>
+                <p>Praga</p>
+                <img src="./praga.png" alt="Praga">
+            </div>
+
+            <div>
+                <p>1-3 people</p>
+                <p>1-3 bags</p>
+            </div>
+
+            <div>
+                <a href="#">Get More Info</a>
+            </div> 
         </section>
 
         <section>
