--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="first" class="column">
             <p>Easy and fast way to own a car.</p>
-            <p>Rocarstor i one of the best leading car dealers in Kenya. We offer car purchase and rental services.</p>
+            <p>Rocarstor is one of the best leading car dealers in Kenya. We offer car purchase and rental services.</p>
 
             <img src="./image 1.png" alt="Mercedez Benz">
 
