added car logos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="first" class="column">
             <p>Easy and fast way to own a car.</p>
-            <p>Rocarstor is one of the best leading car dealers in Kenya. We offer car purchase and rental services.</p>
+            <p><strong>Rocarstor</strong> is one of the best leading car dealers in Kenya. We offer car purchase and rental services.</p>
 
             <img src="./image 1.png" alt="Mercedez Benz">
 
@@ -37,11 +37,11 @@
         <section id="second" class="column">
             <h2>Top Rated Cars.</h2>
             <div>
-                <a href="#">Mercedes</a>
-                <a href="#">Audi</a>
-                <a href="#">Honda</a>
-                <a href="#">Toyota</a>
-                <a href="#">Mazda</a>
+                <a href="#"><img src="./mercedeslogo.jpeg" alt="mercedeslogo">Mercedes</a>
+                <a href="#"><img src="./audilogo.png" alt="audilogo">Audi</a>
+                <a href="#"><img src="./hondalogo.jpeg" alt="hondalogo">Honda</a>
+                <a href="#"><img src="./toyotalogo.jpeg" alt="toyotalogo">Toyota</a>
+                <a href="#"><img src="./mazdalogo.jpeg" alt="">Mazda</a>
 
                 <a href="#">Explore 10+</a>
             </div>
