"images on folder'

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <form>
                         <label>Name:</label>
                         <input type= "text" placeholder="Enter your name">
-                        <label>Email address</label>
+                        <label>Email address:</label>
                         <input type="email" placeholder="Enter your email address">
                         <button>Subscribe</button>
                     </form>
