--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </div>
               <div class="column-cars">
                 <div class="card">
-                  <h3>Mercedes benz e</h3>
+                  <h3>Mercedes benz E</h3>
                       <img class="photos" src="./Mercedes Benz E.png" alt="">
                       <h4 class="image-txt"><i class="fa fa-user" > </i> 1-3 People</h4>
                       <h4 class="image-txt"><i class="fa fa-shopping-bag" ></i> 1-3 People</h4> <br>
